fixed overflow

--- a/src/styling.css
+++ b/src/styling.css
@@ -3,15 +3,16 @@
 @tailwind utilities;
 
 html {
-  background-color: #44546a;
-  overflow: auto
+  overflow: auto;
+  background-color: #44546a
 }
 
 body {
     background-color: #44546a;
     color: white; 
     width: 100vw;
-    height: 100%; 
+    height: 100vh; 	
+    overflow: auto
 }
 
 .button {
@@ -79,7 +80,8 @@ body {
 .textCard {
   background-color:#698ed0;
   color: white;
-  border-color: #698ed0 ;
+  border-color: #698ed0;
+  overflow-y: hidden;
 }
 
 .textCardError {
@@ -93,9 +95,7 @@ body {
   position: sticky;
   top: 0;
   z-index: 10;
-
 }
-
 
 
 
